# the_learning_monkey

./: .gitignore  main.py  pyproject.toml
genai1-basic-agent/norwegian_agent/: agent.py
genai2-tool-agent/tool_agent/: agent.py
genai3-open-router/norwegian_anecdotes_agent/: agent.py
genai4-structured-outputs/grammar_agent/: agent.py
langchain/: basic_llm.ipynb
uv/: uv_start.md
